[tool.poetry]
name = "Synapse"
version = "v1.4.2"
description = "Synapse Bridge (https://www.synapseprotocol.com/) screener."
authors = ["IK <ivandkyulev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
tabulate = "^0.8.10"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"
packaging = "^23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
